Swagger validation added .

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -14,10 +16,15 @@
 	<description>Swagger request validator for Spring Boot</description>
 	<properties>
 		<java.version>15</java.version>
-		<swagger.request.validator.springmvc>2.18.1</swagger.request.validator.springmvc>
 		<json-path>2.6.0</json-path>
-		<swagger-request-validator.version>2.19.5</swagger-request-validator.version>
+		<swagger-request-validator-springmvc-version>2.20.0</swagger-request-validator-springmvc-version>
 	</properties>
+	<scm>
+		<connection>scm:git@github.com:ashu17188/swagger-validator.git</connection>
+		<url>https://github.com/ashu17188/swagger-validator</url>
+		<developerConnection>git@github.com:ashu17188/swagger-validator.git</developerConnection>
+	</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -28,21 +35,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.atlassian.oai</groupId>
-			<artifactId>swagger-request-validator-core</artifactId>
-			<version>${swagger-request-validator.version}</version>
-		</dependency>
-<!-- 		<dependency>
-			<groupId>com.atlassian.oai</groupId>
-			<artifactId>swagger-request-validator-springmvc</artifactId>
-			<version>${swagger.request.validator.springmvc}</version>
-		</dependency>
- -->		<dependency>
-			<groupId>com.atlassian.oai</groupId>
-			<artifactId>swagger-request-validator-core</artifactId>
-			<version>${swagger-request-validator.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
@@ -58,6 +50,22 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.ashu.java</groupId>
+			<artifactId>openapi-spec</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.atlassian.oai</groupId>
+			<artifactId>swagger-request-validator-springmvc</artifactId>
+			<version>${swagger-request-validator-springmvc-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
@@ -76,6 +84,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
 			</plugin>
 		</plugins>
 	</build>
