--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -9,6 +9,6 @@ spring:
 server:
     port: 8081
     servlet:
-        context-path: "/api/swagger-validation-poc/v1"
+        context-path: "/api/v1"
         
         
